unpackaged/main/default/objects/Case/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <description>#452 - Field created to collect data to crate a request for Account creation in MDM system</description>
    <label>Account Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMM_AccountRecordType</valueSetName>
    </valueSet>
</CustomField>