unpackaged/main/default/objects/Case/fields/AccountWebsite__c.field-meta.xml
<CustomField>
    <fullName>AccountWebsite__c</fullName>
    <description>#452 - Field created to collect data to crate a request for Account creation in MDM system</description>
    <label>Account Website</label>
    <type>Url</type>
</CustomField>