unpackaged/main/default/objects/Case/fields/CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddress__c</fullName>
    <description>#452 - Field created to collect data to crate a request for Account creation in MDM system</description>
    <label>Company Address</label>
    <type>Address</type>
</CustomField>