unpackaged/main/default/objects/Case/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>#452 - Field created to collect data to crate a request for Account creation in MDM system</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMM_CustomerType</valueSetName>
    </valueSet>
</CustomField>