unpackaged/main/default/objects/Case/fields/NewAccountName__c.field-meta.xml
<CustomField>
    <fullName>NewAccountName__c</fullName>
    <description>#SAL-452 - This field will hold the new account name which needs to be created in MDM.</description>
    <label>New Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>