unpackaged/main/default/objects/Case/fields/RelatedCompanies__c.field-meta.xml
<CustomField>
    <fullName>RelatedCompanies__c</fullName>
    <description>#452 - Field created to collect data to crate a request for Account creation in MDM system</description>
    <label>Related Companies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>