unpackaged/main/default/objects/Case/recordTypes/AccountCreationRequest.recordType-meta.xml
<RecordType>
    <fullName>AccountCreationRequest</fullName>
    <active>true</active>
    <businessProcess>Account Creation Request</businessProcess>
    <description>Account Creation Request for MDM or Other Accounts</description>
    <label>Account Creation Request</label>
</RecordType>