unpackaged/main/default/objects/Case/listViews/MDM_Intake_Queue_Case.listView-meta.xml
<ListView>
    <fullName>MDM_Intake_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>MDM Intake Queue</label>
    <queue>CMM_MDMIntakeQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>