unpackaged/main/default/objects/Case/listViews/Sales_Ops_Intake_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Sales_Ops_Intake_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Ops Intake Queue</label>
    <queue>CMM_SalesOpsIntakeQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>